--- a/libexec/login_krb4-or-pwd/login_krb4-or-pwd.8
+++ b/libexec/login_krb4-or-pwd/login_krb4-or-pwd.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: login_krb-or-pwd.8,v 1.1 2000/12/12 02:32:11 millert Exp $
+.\" $OpenBSD: login_krb4-or-pwd.8,v 1.1 2001/06/24 23:31:46 hin Exp $
 .\"
 .\" Copyright (c) 2000 Todd C. Miller <Todd.Miller@courtesan.com>
 .\" All rights reserved.
