Update to reflect new names.

--- a/libexec/login_krb4-or-pwd/login_krb4-or-pwd.8
+++ b/libexec/login_krb4-or-pwd/login_krb4-or-pwd.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: login_krb4-or-pwd.8,v 1.1 2001/06/24 23:31:46 hin Exp $
+.\" $OpenBSD: login_krb4-or-pwd.8,v 1.2 2001/06/24 23:33:27 hin Exp $
 .\"
 .\" Copyright (c) 2000 Todd C. Miller <Todd.Miller@courtesan.com>
 .\" All rights reserved.
@@ -26,7 +26,7 @@
 .Dt LOGIN_KRB-OR-PWD 8
 .Os
 .Sh NAME
-.Nm login_krb-or-pwd
+.Nm login_krb4-or-pwd
 .Nd provide kerberos or password authentication type
 .Sh SYNOPSIS
 .Nm
