--- a/libexec/login_krb4/login_krb4.8
+++ b/libexec/login_krb4/login_krb4.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: login_krb4.8,v 1.1 2001/06/24 23:26:22 hin Exp $
+.\" $OpenBSD: login_krb4.8,v 1.2 2001/06/24 23:33:26 hin Exp $
 .\"
 .\" Copyright (c) 2000 Todd C. Miller <Todd.Miller@courtesan.com>
 .\" All rights reserved.
@@ -26,7 +26,7 @@
 .Dt LOGIN_KERBEROS 8
 .Os
 .Sh NAME
-.Nm login_kerberos
+.Nm login_krb4
 .Nd provide kerberos authentication type
 .Sh SYNOPSIS
 .Nm
