--- a/libexec/login_krb4-or-pwd/login_krb4-or-pwd.8
+++ b/libexec/login_krb4-or-pwd/login_krb4-or-pwd.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: login_krb4-or-pwd.8,v 1.2 2001/06/24 23:33:27 hin Exp $
+.\" $OpenBSD: login_krb4-or-pwd.8,v 1.3 2001/06/24 23:45:46 hin Exp $
 .\"
 .\" Copyright (c) 2000 Todd C. Miller <Todd.Miller@courtesan.com>
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .Os
 .Sh NAME
 .Nm login_krb4-or-pwd
-.Nd provide kerberos or password authentication type
+.Nd provide KerberosIV or password authentication type
 .Sh SYNOPSIS
 .Nm
 .Op Fl s Ar service
@@ -39,19 +39,19 @@
 .Pp
 The
 .Nm
-utility first attempts to authenticate the user via kerberos
+utility first attempts to authenticate the user via KerberosIV
 and, failing that, falls back to standard password authentication.
 .Pp
-If kerberos is not configured on the system,
+If KerberosIV is not configured on the system,
 .Nm
 is equivalent to calling
 .Xr login_passwd 8 .
 .Pp
 .Nm
 accepts any command line arguments described in
-.Xr login_kerberos 8
+.Xr login_krb4 8
 or
 .Xr login_passwd 8 .
 .Sh SEE ALSO
-.Xr login_kerberos 8 ,
+.Xr login_krb4 8 ,
 .Xr login_passwd 8
