--- a/lib/libpthread/man/pthread_once.3
+++ b/lib/libpthread/man/pthread_once.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: pthread_once.3,v 1.7 1999/11/24 05:35:32 d Exp $
+.\" $OpenBSD: pthread_once.3,v 1.8 2001/06/24 23:46:35 jasoni Exp $
 .\" Copyright (c) 1996 John Birrell <jb@cimlogic.com.au>.
 .\" All rights reserved.
 .\"
@@ -90,7 +90,7 @@ is undefined if
 has automatic storage duration or is not initialized by
 .Dv PTHREAD_ONCE_INIT .
 .Sh RETURN VALUES
-If successful,  the
+If successful, the
 .Fn pthread_once
 function will return zero. Otherwise an error number will be returned to
 indicate the error.
