--- a/libexec/login_krb4-or-pwd/login_krb4-or-pwd.8
+++ b/libexec/login_krb4-or-pwd/login_krb4-or-pwd.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: login_krb4-or-pwd.8,v 1.3 2001/06/24 23:45:46 hin Exp $
+.\" $OpenBSD: login_krb4-or-pwd.8,v 1.4 2001/06/25 04:00:15 hin Exp $
 .\"
 .\" Copyright (c) 2000 Todd C. Miller <Todd.Miller@courtesan.com>
 .\" All rights reserved.
@@ -54,4 +54,6 @@ or
 .Xr login_passwd 8 .
 .Sh SEE ALSO
 .Xr login_krb4 8 ,
-.Xr login_passwd 8
+.Xr login_passwd 8,
+.Xr kerberos 1
+
