--- a/libexec/login_krb4/login_krb4.8
+++ b/libexec/login_krb4/login_krb4.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: login_krb4.8,v 1.2 2001/06/24 23:33:26 hin Exp $
+.\" $OpenBSD: login_krb4.8,v 1.3 2001/06/25 04:00:15 hin Exp $
 .\"
 .\" Copyright (c) 2000 Todd C. Miller <Todd.Miller@courtesan.com>
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .Os
 .Sh NAME
 .Nm login_krb4
-.Nd provide kerberos authentication type
+.Nd provide KerberosIV authentication type
 .Sh SYNOPSIS
 .Nm
 .Op Fl s Ar service
@@ -38,14 +38,14 @@
 .Pp
 The
 .Nm
-utility implements the kerberos authentication mechanism.
+utility implements the KerberosIV authentication mechanism.
 It is called by
 .Xr login 1 ,
 .Xr su 1 ,
 .Xr ftpd 8 ,
 and others to authenticate the
 .Ar user
-with kerberos.
+with KerberosIV.
 .Pp
 The
 .Ar user
@@ -61,7 +61,7 @@ and
 .Em response .
 (The
 .Em challenge
-protocol is silently ignored but will report success as kerberos
+protocol is silently ignored but will report success as KerberosIV
 authentication is not challenge-response based).
 .Pp
 If the
@@ -84,4 +84,6 @@ successful.
 .Xr passwd 1 ,
 .Xr su 1 ,
 .Xr login.conf 5 ,
-.Xr ftpd 8
+.Xr ftpd 8,
+.Xr login_krb4-or-pwd 8,
+.Xr kerberos 1
