--- a/sbin/isakmpd/isakmpd.policy.5
+++ b/sbin/isakmpd/isakmpd.policy.5
@@ -1,7 +1,7 @@
-.\" $OpenBSD: isakmpd.policy.5,v 1.18 2001/04/30 13:53:27 ho Exp $
+.\" $OpenBSD: isakmpd.policy.5,v 1.19 2001/06/25 04:04:19 angelos Exp $
 .\" $EOM: isakmpd.policy.5,v 1.24 2000/11/23 12:55:25 niklas Exp $
 .\"
-.\" Copyright (c) 1999, Angelos D. Keromytis.  All rights reserved.
+.\" Copyright (c) 1999-2001, Angelos D. Keromytis.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
