With or without fee.

--- a/share/man/man9/crypto.9
+++ b/share/man/man9/crypto.9
@@ -1,10 +1,10 @@
-.\"	$OpenBSD: crypto.9,v 1.10 2001/06/25 04:55:51 angelos Exp $
+.\"	$OpenBSD: crypto.9,v 1.11 2001/06/25 05:00:28 angelos Exp $
 .\"
 .\" The author of this man page is Angelos D. Keromytis (angelos@cis.upenn.edu)
 .\"
 .\" Copyright (c) 2000, 2001 Angelos D. Keromytis
 .\"
-.\" Permission to use, copy, and modify this software without fee
+.\" Permission to use, copy, and modify this software with or without fee
 .\" is hereby granted, provided that this entire notice is included in
 .\" all source code copies of any software which is or includes a copy or
 .\" modification of this software.
