Add -v flag to synopsis line

--- a/usr.bin/tsort/tsort.1
+++ b/usr.bin/tsort/tsort.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tsort.1,v 1.8 2001/04/07 14:17:37 espie Exp $
+.\"	$OpenBSD: tsort.1,v 1.9 2001/06/25 05:01:21 pvalchev Exp $
 .\"	$NetBSD: tsort.1,v 1.6 1996/01/17 20:37:49 mycroft Exp $
 .\"
 .\" Copyright (c) 1990, 1993, 1994
@@ -50,6 +50,7 @@
 .Op Fl l
 .Op Fl q
 .Op Fl r
+.Op Fl v
 .Op Fl w
 .Op Ar file
 .Sh DESCRIPTION
