--- a/share/man/man4/pf.4
+++ b/share/man/man4/pf.4
@@ -1,7 +1,6 @@
-.\"	$OpenBSD: pf.4,v 1.1 2001/06/25 05:37:04 kjell Exp $
+.\"	$OpenBSD: pf.4,v 1.2 2001/06/25 05:45:52 kjell Exp $
 .\"
-.\" Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
-.\" All rights reserved.
+.\" Copyright (C) 2001, Kjell Wooding.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
