--- a/games/hunt/hunt/hunt.6
+++ b/games/hunt/hunt/hunt.6
@@ -1,5 +1,5 @@
 .\"	$NetBSD: hunt.6,v 1.3 1997/10/10 16:32:30 lukem Exp $
-.\"	$OpenBSD: hunt.6,v 1.12 2001/06/06 20:52:20 pjanzen Exp $
+.\"	$OpenBSD: hunt.6,v 1.13 2001/06/25 05:55:46 pvalchev Exp $
 .\"
 .\"  hunt
 .\"  Copyright (c) 1985 Conrad C. Huang, Gregory S. Couch, Kenneth C.R.C. Arnold
@@ -17,10 +17,10 @@
 .Nd a multi-player multi-terminal game
 .Sh SYNOPSIS
 .Nm hunt
-.Op Fl qmcsfbS
+.Op Fl bcfmqsS
 .Op Fl n Ar name
-.Op Fl t Ar team
 .Op Fl p Ar port
+.Op Fl t Ar team
 .Op Fl w Ar message
 .Oo
 .Op Fl h
