--- a/share/man/man4/ipsec.4
+++ b/share/man/man4/ipsec.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ipsec.4,v 1.42 2001/06/25 03:30:23 provos Exp $
+.\" $OpenBSD: ipsec.4,v 1.43 2001/06/25 06:00:35 angelos Exp $
 .\"
 .\" Copyright 1997 Niels Provos <provos@physnet.uni-hamburg.de>
 .\" All rights reserved.
@@ -417,12 +417,12 @@ At the moment the socket options are not fully implemented.
 .Xr icmp 4 ,
 .Xr inet 4 ,
 .Xr ip 4 ,
-.Xr netintro 4 ,
-.Xr tcp 4 ,
-.Xr udp 4 ,
 .Xr ipsecadm 8 ,
 .Xr isakmpd 8 ,
+.Xr netintro 4 ,
 .Xr photurisd 8 ,
+.Xr tcp 4 ,
+.Xr udp 4 ,
 .Xr vpn 8
 .Sh ACKNOWLEDGMENTS
 The authors of the
