--- a/share/man/man9/mbuf_tags.9
+++ b/share/man/man9/mbuf_tags.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mbuf_tags.9,v 1.3 2001/06/25 05:47:17 angelos Exp $
+.\"	$OpenBSD: mbuf_tags.9,v 1.4 2001/06/25 06:37:04 angelos Exp $
 .\"
 .\" The author of this man page is Angelos D. Keromytis (angelos@cis.upenn.edu)
 .\"
@@ -153,13 +153,13 @@ forwarded the frame.
 Used by the
 .Xr gif 4
 interface to detect loops in processing.
-The tag contains a pointer to the gif interface that already forwarded
+The tag contains a pointer to the gif interface that already processed
 the packet.
 .It PACKET_TAG_GRE
 Used by the
 .Xr gre 4
 interface to detect loops in processing.
-The tag contains a pointer to the gre interface that already forwarded
+The tag contains a pointer to the gre interface that already processed
 the packet.
 .It PACKET_TAG_IN_PACKET_CHECKSUM
 Used by network cards that can compute complete packet checksums to
