apm appeared in NetBSD 1.3, not OpenBSD 1.2.

--- a/usr.sbin/apm/apm.8
+++ b/usr.sbin/apm/apm.8
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$Id: apm.8,v 1.11 2000/11/09 17:53:10 aaron Exp $
+.\"	$Id: apm.8,v 1.12 2001/07/04 04:24:50 jasoni Exp $
 .\"
 .Dd March 18, 1996
 .Dt APM 8
@@ -120,4 +120,4 @@ Advanced Power Management (APM) BIOS Interface Specification (revision
 The
 .Nm
 command appeared in
-.Ox 1.2 .
+.Nx 1.3 .
