--- a/usr.sbin/apm/apm.8
+++ b/usr.sbin/apm/apm.8
@@ -24,7 +24,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$Id: apm.8,v 1.14 2001/07/04 06:03:10 jasoni Exp $
+.\"	$Id: apm.8,v 1.15 2001/07/04 07:10:51 mickey Exp $
 .\"
 .Dd March 18, 1996
 .Dt APM 8
@@ -123,4 +123,4 @@ command appeared in
 .Nx 1.3 ,
 .Ox
 support was added in
-.Ox 2.0 .
+.Ox 1.2 .
