we don't like: o) .Pp before/after .Sh; o) .Pp before/after .Sh; o) .Nm without argument in SYNOPSIS;

--- a/usr.sbin/afs/src/appl/afsutils/aklog.1
+++ b/usr.sbin/afs/src/appl/afsutils/aklog.1
@@ -1,4 +1,4 @@
-.\" $Id: aklog.1,v 1.1 2000/09/11 14:40:33 art Exp $
+.\" $Id: aklog.1,v 1.2 2001/07/20 19:09:46 mpech Exp $
 .Dd Aug 06, 2000
 .Dt AKLOG SECTION
 .Os Arla
@@ -7,7 +7,7 @@
 .Nd
 Fetches tokens from your ticket-file.
 .Sh SYNOPSIS
-.Nm
+.Nm aklog
 .Op Fl cell Ar <cell name>
 .Op Fl createuser Ar <cell name>
 .Op Fl debug Ar <cell name>
