--- a/usr.sbin/afs/src/appl/afsutils/klog.1
+++ b/usr.sbin/afs/src/appl/afsutils/klog.1
@@ -1,4 +1,4 @@
-.\" $Id: klog.1,v 1.1 2000/09/11 14:40:33 art Exp $
+.\" $Id: klog.1,v 1.2 2001/07/20 19:09:46 mpech Exp $
 .\"
 .Dd July 7, 1999
 .Dt KLOG 1
@@ -8,7 +8,7 @@
 .Nd
 A program to get AFS tokens and possibly other things
 .Sh SYNOPSIS
-.Nm
+.Nm klog
 .Op Fl principal Ar Kerberos principal
 .Op Fl cell Ar AFS cell
 .Op Fl lifetime Ar token lifetime in hrs:min:sec
