--- a/usr.sbin/afs/src/appl/afsutils/tokens.1
+++ b/usr.sbin/afs/src/appl/afsutils/tokens.1
@@ -1,4 +1,4 @@
-.\" $Id: tokens.1,v 1.1 2000/09/11 14:40:33 art Exp $
+.\" $Id: tokens.1,v 1.2 2001/07/20 19:09:46 mpech Exp $
 .\"
 .Dd July 7, 1999
 .Dt TOKENS 1
@@ -8,7 +8,7 @@
 .Nd
 lists all AFS tokens in your current PAG.
 .Sh SYNOPSIS
-.Nm
+.Nm tokens
 .Op Fl athena
 .Op Fl verbose, v
 .Sh DESCRIPTION
