--- a/usr.sbin/afs/src/appl/fs/fs.1
+++ b/usr.sbin/afs/src/appl/fs/fs.1
@@ -1,5 +1,5 @@
-.\"     $OpenBSD: fs.1,v 1.1 2000/09/11 14:40:35 art Exp $
-.\"	$Id: fs.1,v 1.1 2000/09/11 14:40:35 art Exp $
+.\"     $OpenBSD: fs.1,v 1.2 2001/07/20 19:09:46 mpech Exp $
+.\"	$Id: fs.1,v 1.2 2001/07/20 19:09:46 mpech Exp $
 .Dd March 29, 2000
 .Dt FS 1
 .Os
@@ -7,7 +7,7 @@
 .Nm fs
 .Nd Manage AFS directorys
 .Sh SYNOPSIS
-.Nm
+.Nm fs
 .Op Ar command
 .Op Ar args
 .Sh DESCRIPTION
