--- a/usr.sbin/afs/src/appl/pts/pts.1
+++ b/usr.sbin/afs/src/appl/pts/pts.1
@@ -1,5 +1,5 @@
-.\"     $OpenBSD: pts.1,v 1.1 2000/09/11 14:40:36 art Exp $
-.\"	$Id: pts.1,v 1.1 2000/09/11 14:40:36 art Exp $
+.\"     $OpenBSD: pts.1,v 1.2 2001/07/20 19:09:46 mpech Exp $
+.\"	$Id: pts.1,v 1.2 2001/07/20 19:09:46 mpech Exp $
 .Dd March 25, 2000
 .Dt PTS 1
 .Os
@@ -245,7 +245,6 @@ implemented yet.
 .Bd -filled -offset indent -compact
 This command has not been implemented yet.
 .Ed
-.Pp
 .Sh SEE ALSO
 .Xr afsd 8 ,
 .Xr fs 1 ,
