--- a/usr.sbin/afs/src/appl/udebug/udebug.1
+++ b/usr.sbin/afs/src/appl/udebug/udebug.1
@@ -1,5 +1,5 @@
 .\" Copyright (c) 2000 Kungliga Tekniska Högskolan
-.\" $Id: udebug.1,v 1.1 2000/09/11 14:40:36 art Exp $
+.\" $Id: udebug.1,v 1.2 2001/07/20 19:09:46 mpech Exp $
 .Dd Aug 06, 2000
 .Dt UDEBUG SECTION
 .Os Arla
@@ -9,7 +9,7 @@
 a tool to diagnose synchronization problems with ubik-database
 servers.
 .Sh SYNOPSIS
-.Nm
+.Nm udebug
 .Op Fl servers Ar servers ...
 .Op Fl port Ar port
 .Op Fl long
