--- a/usr.sbin/afs/src/arlad/arlad.1
+++ b/usr.sbin/afs/src/arlad/arlad.1
@@ -1,5 +1,5 @@
-.\"     $OpenBSD: arlad.1,v 1.1 2000/09/11 14:40:40 art Exp $
-.\"	$Id: arlad.1,v 1.1 2000/09/11 14:40:40 art Exp $
+.\"     $OpenBSD: arlad.1,v 1.2 2001/07/20 19:09:46 mpech Exp $
+.\"	$Id: arlad.1,v 1.2 2001/07/20 19:09:46 mpech Exp $
 .Dd September 5, 1998
 .Dt ARLAD 1
 .Os
@@ -7,7 +7,7 @@
 .Nm arlad
 .Nd AFS cache manager for xfs
 .Sh SYNOPSIS
-.Nm
+.Nm arlad
 .Op Fl t | Fl -test
 .Oo Fl c Ar string \*(Ba Xo
 .Fl -conffile= Ns Ar string Oc
