--- a/usr.sbin/afs/src/appl/afsutils/unlog.1
+++ b/usr.sbin/afs/src/appl/afsutils/unlog.1
@@ -1,4 +1,4 @@
-.\" $Id: unlog.1,v 1.1 2000/09/11 14:40:34 art Exp $
+.\" $Id: unlog.1,v 1.2 2001/07/20 19:09:46 mpech Exp $
 .\"
 .Dd July 7, 1999
 .Dt UNLOG 1
@@ -8,7 +8,7 @@
 .Nd
 A program to destroy some or all of your AFS tokens
 .Sh SYNOPSIS
-.Nm
+.Nm unlog
 .Op Fl cell Ar cells...
 .Op Ar cells...
 .Op Fl help
