--- a/usr.sbin/afs/src/lib/roken/getarg.3
+++ b/usr.sbin/afs/src/lib/roken/getarg.3
@@ -1,5 +1,5 @@
 .\" Copyright (c) 1999 Kungliga Tekniska Högskolan
-.\" $Id: getarg.3,v 1.1 2000/09/11 14:41:00 art Exp $
+.\" $Id: getarg.3,v 1.2 2001/07/20 19:09:47 mpech Exp $
 .Dd September 24, 1999
 .Dt GETARG 3
 .Os ROKEN
@@ -233,8 +233,6 @@ and if you're really confused you can do it multiple times
 .Pf ( Fl -no-no-help= Ns Ar false ,
 or even 
 .Fl -no-no-help= Ns Ar maybe ) .
-
-.Pp
 .Sh EXAMPLE
 .Bd -literal
 #include <stdio.h>
