--- a/usr.sbin/afs/src/rx/rxdebug.1
+++ b/usr.sbin/afs/src/rx/rxdebug.1
@@ -1,5 +1,5 @@
 .\" Copyright (c) 2000 Kungliga Tekniska Högskolan
-.\" $Id: rxdebug.1,v 1.1 2000/09/11 14:41:23 art Exp $
+.\" $Id: rxdebug.1,v 1.2 2001/07/20 19:09:47 mpech Exp $
 .Dd Aug 24, 2000
 .Dt SECTION
 .Nm rxdebug
@@ -9,7 +9,7 @@
 .Nd
 a tool to diagnose problems with rx.
 .Sh SYNOPSIS
-.Nm
+.Nm rxdebug
 .Op Fl port Ar port
 .Op Fl nodally
 .Op Fl allconnection
@@ -58,7 +58,6 @@ list of the servers to talk to.
 .Nm
 is used to diagnose a rx-implementation, what version the afs-client
 are running, why rx missbehavies, or if there are performance problems.
-.Pp
 .Sh EXAMPLES
 .Bd -literal
 datan# rxdebug -servers localhost -port 4711 -status -noconn
