o) .Sh AUTHOR -> .Sh AUTHORS; o) .Sh EXAMPLE -> .Sh EXAMPLES; o) Delete .Sh OPTIONS. Text moved to .Sh DESCRIPTION;
millert@ ok

--- a/usr.sbin/amd/amq/amq.8
+++ b/usr.sbin/amd/amq/amq.8
@@ -36,7 +36,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)amq.8	8.3 (Berkeley) 4/18/94
-.\"	$Id: amq.8,v 1.6 2000/11/08 19:37:34 aaron Exp $
+.\"	$Id: amq.8,v 1.7 2001/08/02 18:37:34 mpech Exp $
 .\"
 .Dd March 16, 1991
 .Dt AMQ 8
@@ -116,7 +116,7 @@ protocol description
 .El
 .Sh SEE ALSO
 .Xr amd 8
-.Sh AUTHOR
+.Sh AUTHORS
 .An Jan-Simon Pendry
 <jsp@doc.ic.ac.uk>, Department of Computing, Imperial College, London, UK.
 .\" .Sh HISTORY
