--- a/usr.sbin/amd/amd/amd.8
+++ b/usr.sbin/amd/amd/amd.8
@@ -36,7 +36,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)amd.8	5.10 (Berkeley) 4/19/94
-.\"	$Id: amd.8,v 1.9 2000/11/08 19:37:34 aaron Exp $
+.\"	$Id: amd.8,v 1.10 2001/08/02 18:37:34 mpech Exp $
 .\"
 .Dd April 19, 1994
 .Dt AMD 8
@@ -231,7 +231,7 @@ the features.
 .Rs
 .%T Amd \- The 4.4 BSD Automounter
 .Re
-.Sh AUTHOR
+.Sh AUTHORS
 .An Jan-Simon Pendry
 <jsp@doc.ic.ac.uk>, Department of Computing, Imperial College, London, UK.
 .Sh HISTORY
