--- a/usr.sbin/sa/sa.8
+++ b/usr.sbin/sa/sa.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sa.8,v 1.9 2000/03/19 17:57:14 aaron Exp $
+.\"	$OpenBSD: sa.8,v 1.10 2001/08/02 18:37:35 mpech Exp $
 .\"
 .\" Copyright (c) 1994 Christopher G. Demetriou
 .\" All rights reserved.
@@ -28,7 +28,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$Id: sa.8,v 1.9 2000/03/19 17:57:14 aaron Exp $
+.\"	$Id: sa.8,v 1.10 2001/08/02 18:37:35 mpech Exp $
 .\"
 .Dd February 25, 1994
 .Dt SA 8
@@ -251,7 +251,7 @@ was written for
 .Nx 0.9a
 from the specification provided by various systems' manual pages.
 Its date of origin is unknown to the author.
-.Sh AUTHOR
+.Sh AUTHORS
 .Bl -tag
 Chris G. Demetriou, cgd@postgres.berkeley.edu
 .El
