o) We always closes .Bl and .Bd tags;
millert@ ok

--- a/usr.sbin/accton/accton.8
+++ b/usr.sbin/accton/accton.8
@@ -24,7 +24,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$Id: accton.8,v 1.6 2000/10/16 18:30:45 deraadt Exp $
+.\"	$Id: accton.8,v 1.7 2001/08/03 16:03:02 mpech Exp $
 .\"
 .Dd October 18, 1993
 .Dt ACCTON 8
@@ -46,6 +46,7 @@ If no argument is given, accounting is turned off.
 .Bl -tag -width /var/account/acct
 .It Pa /var/account/acct
 default accounting file
+.El
 .Sh SEE ALSO
 .Xr lastcomm 1 ,
 .Xr acct 2 ,
