o) {Open,Net,Free}BSD -> .{O,N,F}x; o) "start sentence on new line" issues; o) minimal -mdoc improvements;
millert@ ok

--- a/usr.sbin/ppp/pppctl/pppctl.8
+++ b/usr.sbin/ppp/pppctl/pppctl.8
@@ -1,4 +1,4 @@
-.\" $Id: pppctl.8,v 1.7 2000/03/19 17:57:11 aaron Exp $
+.\" $Id: pppctl.8,v 1.8 2001/08/17 11:13:58 mpech Exp $
 .Dd 26 June 1997
 .Dt PPPCTL 8
 .Os
@@ -202,4 +202,5 @@ commands in
 .Sh HISTORY
 The
 .Nm
-command first appeared in FreeBSD 2.2.5.
+command first appeared in
+.Fx 2.2.5 .
