--- a/usr.sbin/amd/amd/amd.8
+++ b/usr.sbin/amd/amd/amd.8
@@ -36,7 +36,7 @@
 .\" SUCH DAMAGE.
 .\"
 .\"     from: @(#)amd.8	5.10 (Berkeley) 4/19/94
-.\"	$Id: amd.8,v 1.10 2001/08/02 18:37:34 mpech Exp $
+.\"	$Id: amd.8,v 1.11 2001/08/18 21:01:49 pvalchev Exp $
 .\"
 .Dd April 19, 1994
 .Dt AMD 8
@@ -228,9 +228,10 @@ the features.
 .Xr mk-amd-map 8 ,
 .Xr mount 8 ,
 .Xr umount 8
-.Rs
-.%T Amd \- The 4.4 BSD Automounter
-.Re
+.Pp
+.%T Amd \- The 4.4 BSD Automounter ,
+available by running
+.Dq info amd
 .Sh AUTHORS
 .An Jan-Simon Pendry
 <jsp@doc.ic.ac.uk>, Department of Computing, Imperial College, London, UK.
