--- a/share/man/man4/pipex.4
+++ b/share/man/man4/pipex.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pipex.4,v 1.3 2012/09/20 16:29:01 jmc Exp $
+.\"	$OpenBSD: pipex.4,v 1.5 2013/01/29 15:42:20 yasuoka Exp $
 .\"
 .\" Copyright (c) 2012 YASUOKA Masahiko <yasuoka@openbsd.org>
 .\" Copyright (c) 2010 SUENAGA Hiroki <hsuenaga@openbsd.org>
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 20 2012 $
+.Dd $Mdocdate: January 29 2013 $
 .Dt PIPEX 4
 .Os
 .Sh NAME
@@ -281,7 +281,7 @@ struct pipex_session_descr_req {
 .El
 .Sh SEE ALSO
 .Xr ioctl 2 ,
-.\" .Xr pppx 4 ,
+.Xr pppx 4 ,
 .Xr tun 4 ,
 .Xr npppd 8 ,
 .Xr sysctl 8
