--- a/share/man/man8/man8.beagle/MAKEDEV.8
+++ b/share/man/man8/man8.beagle/MAKEDEV.8
@@ -1,10 +1,10 @@
-.\" $OpenBSD: MAKEDEV.8,v 1.2 2012/08/23 14:59:02 todd Exp $
+.\" $OpenBSD$
 .\"
 .\" THIS FILE AUTOMATICALLY GENERATED.  DO NOT EDIT.
 .\" generated from:
 .\"
 .\"	OpenBSD: etc.beagle/MAKEDEV.md,v 1.3 2012/08/23 06:15:28 deraadt Exp 
-.\"	OpenBSD: MAKEDEV.common,v 1.60 2012/08/23 06:15:28 deraadt Exp 
+.\"	OpenBSD: MAKEDEV.common,v 1.61 2013/01/30 01:59:20 yasuoka Exp 
 .\"	OpenBSD: MAKEDEV.man,v 1.7 2009/03/18 17:34:25 sobrado Exp 
 .\"	OpenBSD: MAKEDEV.mansub,v 1.2 2004/02/20 19:13:01 miod Exp 
 .\"
@@ -23,7 +23,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: August 23 2012 $
+.Dd $Mdocdate: March 18 2009 $
 .Dt MAKEDEV 8 beagle
 .Os
 .Sh NAME
@@ -80,6 +80,7 @@ ATAPI and SCSI CD-ROM drives, see
 .It Ar ch*
 SCSI media changers, see
 .Xr ch 4 .
+raid_dev
 .It Ar rd*
 .Dq rd
 pseudo-disks, see
