tmpfs - ported from NetBSD by pedro@.
Based on tmpfs5.diff

--- a/lib/libc/sys/mount.2
+++ b/lib/libc/sys/mount.2
@@ -208,6 +208,23 @@ struct udf_args {
 };
 .Ed
 .Pp
+.Dv MOUNT_TMPFS
+.Bd -literal -offset indent -compact
+#define TMPFS_ARGS_VERSION	1
+struct tmpfs_args {
+	int			ta_version;
+
+	/* Size counters. */
+	ino_t			ta_nodes_max;
+	off_t			ta_size_max;
+
+	/* Root node attributes. */
+	uid_t			ta_root_uid;
+	gid_t			ta_root_gid;
+	mode_t			ta_root_mode;
+};
+.Ed
+.Pp
 The
 .Fn unmount
 function call disassociates the filesystem from the specified
