--- a/share/man/man4/options.4
+++ b/share/man/man4/options.4
@@ -257,6 +257,11 @@ Includes code for the UDF file systems typically found on DVD discs.
 See
 .Xr mount_udf 8
 for details.
+.It Cd option TMPFS
+Includes code for the TMPFS efficient memory file system.
+See
+.Xr mount_tmpfs 8
+for details.
 .El
 .Sh FILE SYSTEM OPTIONS
 .Bl -ohang
