--- a/share/man/man5/fstab.5
+++ b/share/man/man5/fstab.5
@@ -127,6 +127,8 @@ A disk partition to be used for swapping.
 A UDF filesystem.
 .It vnd
 A VND image file.
+.It tmpfs
+A local, efficient memory-based file system.
 .El
 .Pp
 The fourth field,
