--- a/sbin/mount/mount.8
+++ b/sbin/mount/mount.8
@@ -389,6 +389,7 @@ with option
 .Xr mount_nfs 8 ,
 .Xr mount_ntfs 8 ,
 .Xr mount_udf 8 ,
+.Xr mount_tmpfs 8 ,
 .Xr mount_vnd 8 ,
 .Xr sysctl 8 ,
 .Xr umount 8
