--- a/share/man/man8/man8.imx/MAKEDEV.8
+++ b/share/man/man8/man8.imx/MAKEDEV.8
@@ -3,8 +3,8 @@
 .\" THIS FILE AUTOMATICALLY GENERATED.  DO NOT EDIT.
 .\" generated from:
 .\"
-.\"	OpenBSD: etc.imx/MAKEDEV.md,v 1.3 2012/08/23 06:15:28 deraadt Exp 
-.\"	OpenBSD: MAKEDEV.common,v 1.60 2012/08/23 06:15:28 deraadt Exp 
+.\"	OpenBSD: etc.imx/MAKEDEV.md,v 1.4 2013/03/15 09:10:52 ratchov Exp 
+.\"	OpenBSD: MAKEDEV.common,v 1.63 2013/03/28 21:20:46 jmc Exp 
 .\"	OpenBSD: MAKEDEV.man,v 1.7 2009/03/18 17:34:25 sobrado Exp 
 .\"	OpenBSD: MAKEDEV.mansub,v 1.2 2004/02/20 19:13:01 miod Exp 
 .\"
@@ -23,7 +23,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: March 18 2009 $
+.Dd $Mdocdate: March 28 2013 $
 .Dt MAKEDEV 8 imx
 .Os
 .Sh NAME
@@ -80,7 +80,6 @@ ATAPI and SCSI CD-ROM drives, see
 .It Ar ch*
 SCSI media changers, see
 .Xr ch 4 .
-raid_dev
 .It Ar rd*
 .Dq rd
 pseudo-disks, see
@@ -210,9 +209,6 @@ I2O controller devices, see
 .It Ar lkm
 Loadable kernel modules interface, see
 .Xr lkm 4 .
-.It Ar music*
-MIDI sequencer, see
-.Xr music 4 .
 .It Ar pci*
 PCI bus devices, see
 .Xr pci 4 .
@@ -248,7 +244,7 @@ Video V4L2 devices, see
 .Xr video 4 .
 .It Ar vscsi*
 Virtual SCSI controller, see
-.Xr vscsi 8 .
+.Xr vscsi 4 .
 .El
 .Sh FILES
 .Bl -tag -width /dev -compact
