--- a/share/man/man9/mutex.9
+++ b/share/man/man9/mutex.9
@@ -1,6 +1,6 @@
 .\" $OpenBSD: mutex.9,v 1.15 2013/06/04 19:27:10 schwarze Exp $
 .\"
-.\" Copyright (c) 2005 Pedro Martelletto <pedro@ambientworks.net>
+.\" Copyright (c) 2005, 2013 Pedro Martelletto <pedro@ambientworks.net>
 .\" All rights reserved.
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: June 4 2013 $
+.Dd $Mdocdate$
 .Dt MUTEX 9
 .Os
 .Sh NAME
@@ -47,20 +47,40 @@ The
 .Fn mtx_init
 function is used to initiate the mutex pointed to by
 .Fa mtxp .
-When acquired, the mutex will cause the processor interrupt level to be raised
-to
+The
 .Fa wantipl
-if necessary.
+parameter affects the way
+.Fn mtx_enter ,
+.Fn mtx_enter_try
+and
+.Fn mtx_leave
+work, as described below.
 .Pp
 The
 .Fn mtx_enter
-function acquires a mutex, spinning if necessary.
+function acquires a mutex, spinning at the current interrupt level if necessary.
+If the current interrupt level is lower than
+.Fa wantipl ,
+it is raised to
+.Fa wantipl
+before the mutex is acquired and
+.Fn mtx_enter
+returns. 
 .Pp
 The
 .Fn mtx_enter_try
-function attempts to acquire a mutex.
-If it succeeds in acquiring the mutex it will return non-zero, otherwise
-it will return 0.
+function attempts to acquire a mutex without spinning.
+If the current interrupt level is lower than
+.Fa wantipl ,
+it is raised to
+.Fa wantipl
+before an attempt to grab the lock is made.
+If successful,
+.Fn mtx_enter_try
+returns 1.
+If unsuccessful,
+.Fn mtx_enter_try
+returns 0 and restores the original interrupt level.
 .Pp
 The
 .Fn mtx_leave
@@ -91,9 +111,6 @@ functions were written by
 .Aq art@openbsd.org .
 .Sh CAVEATS
 As these are spinning locks, don't sleep while holding one.
-.Pp
-If using a mutex in an interrupt handler, locks must be initialised
-with the correct IPL or deadlock will occur.
 .Pp
 Multiple mutexes may be nested, but not interleaved.
 This is okay:
