--- a/usr.bin/sendbug/sendbug.1
+++ b/usr.bin/sendbug/sendbug.1
@@ -1,9 +1,9 @@
-.\" $OpenBSD: sendbug.1,v 1.21 2012/08/12 17:01:36 schwarze Exp $
+.\" $OpenBSD: sendbug.1,v 1.23 2013/07/16 00:07:52 schwarze Exp $
 .\"
 .\" Written by Raymond Lai <ray@cyth.net>.
 .\" Public domain.
 .\"
-.Dd $Mdocdate: August 12 2012 $
+.Dd $Mdocdate: July 16 2013 $
 .Dt SENDBUG 1
 .Os
 .Sh NAME
@@ -123,9 +123,9 @@ temporary PR report
 .Sh AUTHORS
 .Nm
 was written from scratch for the public domain by
-.An Ray Lai Aq ray@cyth.net .
+.An Ray Lai Aq Mt ray@cyth.net .
 .Sh CAVEATS
 The content of the PR is not confidential; it is sent out to a public
 mailing list.
 Sensitive, security related issues should be sent via email to
-.Aq security@OpenBSD.org .
+.Aq Mt security@OpenBSD.org .
